archive/kubernetes/apps/default/flaresolverr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/instance: flaresolverr
    app.kubernetes.io/name: flaresolverr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: flaresolverr
    app.kubernetes.io/name: flaresolverr
  ports:
    - name: http
      protocol: TCP
      port: 8191
      targetPort: http
